# NetoInherit

./: CMakeLists.txt
entities/: Figure.cpp  Figure.hpp  Shape.hpp
entities/quadangle/: Parallelogram.cpp  Parallelogram.hpp  QuadAngle.cpp  QuadAngle.hpp  Quads.hpp  Rectangle.cpp  Rectangle.hpp  Rhomb.cpp  Rhomb.hpp  Square.cpp  Square.hpp
entities/triangle/: EquilateralTriangle.cpp  EquilateralTriangle.hpp  IsoscelesTriangle.cpp  IsoscelesTriangle.hpp  RectangularTriangle.cpp  RectangularTriangle.hpp  Triangle.cpp  Triangle.hpp  Triangles.hpp
firstTask/: main.cpp
secondTask/: main.cpp
thirdTask/: main.cpp
